/*! \file cover.proto
    \brief Format to save the cover
*/
syntax = "proto2";

package all_distance_sketch.proto;


message NodeEmbeddingGpb {
  optional uint64 seed_node_id = 1;
  repeated double node_ids = 2;
}

message EmbeddingGpb {
  repeated NodeEmbeddingGpb seeds = 1;
}